# software-engineering-homeworks

./: .gitignore  README.md
hw1/: README.md  workspace.dsl
hw2/: README.md  docker-compose.yaml  run_unit_tests.sh
hw2/api-gateway/: Dockerfile
hw2/api-gateway/src/handlers/: LoginHandler.cpp
hw2/file-management-service/: CMakeLists.txt  Dockerfile.test
hw2/file-management-service/src/: main.cpp
hw2/file-management-service/src/controller/: FileManagementController.cpp  FileManagementController.h
hw2/file-management-service/src/dto/: CreateFileResponse.h  CreateFolderResponse.h  Folder.h
hw2/file-management-service/src/exceptions/: FolderNotFoundException.h
hw2/file-management-service/src/service/: FileManagementService.cpp  FileManagementService.h
hw2/file-management-service/src/util/: DateTimeHelper.h  JsonHelper.h  MultipartParser.h
hw2/identity-service/: CMakeLists.txt  Dockerfile  Dockerfile.test
hw2/identity-service/src/: main.cpp
hw2/identity-service/src/controller/: UserController.cpp
hw2/identity-service/src/exceptions/: InvalidCredentialsException.h  UserAlreadyExistsException.h  UserNotFoundException.h
hw2/identity-service/src/repository/: IUserRepository.h  InMemoryUserRepository.h
hw2/identity-service/src/service/: IdentityService.cpp  IdentityService.h
hw2/identity-service/src/util/: JsonHelper.h  UuidGenerator.h
hw2/identity-service/tests/: IdentityServiceTest.cpp
hw3/: README.md  docker-compose-tests.yaml  docker-compose.yaml
hw3/api-gateway/: CMakeLists.txt
hw3/api-gateway/src/config/: Config.h
hw3/api-gateway/src/dto/: IdentityLoginResponse.h  LoginResponse.h
hw3/api-gateway/src/factory/: HandlerFactory.h
hw3/api-gateway/src/handlers/: GatewayHandler.h  LoginHandler.h
hw3/api-gateway/src/jwt/: JwtValidator.cpp
hw3/file-management-service/: Dockerfile
hw3/file-management-service/src/dto/: GetFoldersResponse.h
hw3/file-management-service/src/repository/: InMemoryFileManagementRepository.h
hw3/file-management-service/tests/: FileManagementServiceTest.cpp
hw3/identity-service/: CMakeLists.txt  Dockerfile
hw3/identity-service/db/: data.sql  optimization.md  queries.sql  schema.sql
hw3/identity-service/db/init/: init.sql
hw3/identity-service/src/controller/: UserController.h
hw3/identity-service/src/dto/: GetUsersResponse.h  UserRegistrationRequest.h
hw3/identity-service/src/entity/: UserAuth.h
hw3/identity-service/src/entity/projection/: UserSearchByNameMaskResult.h
hw3/identity-service/src/exceptions/: InvalidCredentialsException.h
hw3/identity-service/src/kafka/: INotificationPublisher.h
hw3/identity-service/src/repository/: PostgreSQLUserAuthRepostory.cpp
hw3/identity-service/src/service/: IdentityService.cpp
hw3/identity-service/src/util/: PasswordHasher.h
hw3/notification-service/db/: data.sql  optimization.md  queries.sql  schema.sql
hw3/notification-service/db/init/: init.sql
hw4/: docker-compose.yaml  openapi.yaml
hw4/api-gateway/config/: config.json
hw4/api-gateway/src/handlers/: GatewayHandler.cpp
hw4/api-gateway/src/proxy/: ReverseProxy.cpp  ReverseProxy.h
hw4/file-management-service/: CMakeLists.txt  Dockerfile  openapi.yaml
hw4/file-management-service/db/: schema_design.md  validation.js
hw4/file-management-service/src/: main.cpp
hw4/file-management-service/src/dto/: FileMetadata.h
hw4/file-management-service/src/entity/: Folder.cpp
hw4/file-management-service/src/exceptions/: FolderAlreadyExistsException.h
hw4/file-management-service/src/repository/: IFileManagementRepository.h
hw4/file-management-service/src/service/: FileManagementService.cpp  FileManagementService.h
hw4/file-management-service/src/util/: ChecksumHelper.h  DateTimeHelper.h  UuidGenerator.h
hw4/identity-service/: Dockerfile.test
hw4/identity-service/db/: queries.sql
hw4/identity-service/src/: main.cpp
hw4/identity-service/src/dto/: LoginRequest.h  User.h
hw4/identity-service/src/exceptions/: UserAlreadyExistsException.h
hw4/identity-service/src/kafka/: StubNotificationPublisher.h
hw4/identity-service/src/repository/: PostgreSQLUserAuthRepository.h
hw4/identity-service/tests/: IdentityServiceTest.cpp
hw5/: MAX Disk 360 - Интеграционные тесты.postman_collection.json  README.md  docker-compose-tests.yaml  docker-compose.yaml  perofmance_design.md  run_unit_tests.sh
hw5/api-gateway/src/: main.cpp
hw5/api-gateway/src/config/: Config.cpp
hw5/api-gateway/src/factory/: HandlerFactory.cpp
hw5/api-gateway/src/handlers/: LoginHandler.cpp
hw5/api-gateway/src/jwt/: JwtValidator.h
hw5/file-management-service/: CMakeLists.txt  Dockerfile
hw5/file-management-service/db/: data.js  queries.js
hw5/file-management-service/db/init/: init.js
hw5/file-management-service/src/: main.cpp
hw5/file-management-service/src/dto/: CreateFolderRequest.h  GetFoldersResponse.h
hw5/file-management-service/src/entity/: File.cpp  File.h  Folder.h
hw5/file-management-service/src/exceptions/: FileAlreadyExistsException.h  FileNotFoundException.h
hw5/file-management-service/src/repository/: IFileManagementRepository.h  MongoFileManagementRepository.cpp  MongoFileManagementRepository.h
hw5/file-management-service/src/service/: FileManagementService.cpp  FileManagementService.h
hw5/file-management-service/src/service/cache/: ServiceCache.h
hw5/file-management-service/src/util/: UuidHelper.h
hw5/identity-service/: CMakeLists.txt  Dockerfile  openapi.yaml
hw5/identity-service/db/: data.sql
hw5/identity-service/src/: main.cpp
hw5/identity-service/src/controller/: UserController.cpp  UserController.h
hw5/identity-service/src/dto/: LoginResponse.h  User.h  UserRegistrationResponse.h
hw5/identity-service/src/entity/: UserProfile.h
hw5/identity-service/src/repository/: IUserAuthRepository.h  IUserProfileRepository.h  PostgreSQLUserProfileRepository.cpp  PostgreSQLUserProfileRepository.h
hw5/identity-service/src/service/: IdentityService.cpp  IdentityService.h
hw5/identity-service/tests/: 1.sh  rate_limiter_test.sh
hw5/notification-service/db/init/: init.sql
(+7 files in other folders)
